--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "react": "^15.6.1",
     "react-apollo": "^1.4.15",
     "react-dom": "^15.6.1",
-    "react-scripts": "1.0.13",
-    "semantic-ui-react": "^0.72.0"
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.0.13"
   },
   "scripts": {
     "start": "react-scripts start",
